--- a/history.txt
+++ b/history.txt
@@ -2,7 +2,8 @@ git clone https://github.com/protocolbuffers/protobuf.git
 git clone https://github.com/abseil/abseil-cpp.git
 git clone https://github.com/google/benchmark.git 
 # git clone https://github.com/google/googletest.git
-git clone https://github.com/google/googletest.git benchmark/googletest
+git clone https://github.com/google/googletest.git 
+#benchmark/googletest
 git clone https://github.com/google/leveldb.git
 
 git clone https://github.com/FastFilter/xor_singleheader.git
